<resources>
    <string name="app_name">MMReviews</string>
    <string name="title_activity_maps">Map</string>
    <string name="loginhere">Already have an account? <u>Login!</u></string>
    <string name="username">Username</string>
    <string name="fullname">Full name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">register</string>
    <string name="regiserSign">Regiser</string>
    <string name="loginSign">Login</string>
    <string name="loginBtn">login</string>
    <string name="signup">New here? <u>Sign up now!</u></string>
    <string name="log_out">log out</string>
    <string name="edit_profile">Edit profile</string>
    <string name="full_name">Full name</string>
    <string name="override">override</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="new_fullname">New fullname</string>
    <string name="new_username">New username</string>
    <string name="edit_picture">Edit picture</string>
    <string name="default_info_snippet" />
    <string name="place_information">Place Information</string>
    <string name="place_name">Place name</string>
    <string name="reviews">Reviews</string>
    <string name="user">User:</string>
    <string name="comment">Comment:</string>
    <string name="like">Like</string>
    <string name="dislike">dislike</string>
    <string name="add_comment">Add Comment</string>
    <string name="your_comment">Your comment</string>
    <string name="add">add</string>
    <string name="rating">Rating:</string>
    <string name="notification">Notification</string>
    <string name="comented">comented on</string>
    <string name="notification_page">Notification page</string>
    <string name="home_page">Home page</string>
    <string name="enter_place">Enter place</string>
</resources>