<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".SignUp">

        <TextView
            android:id="@+id/registerSign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regiserSign"
            android:textColor="#4B83E5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="60sp"
            android:padding="20dp">

        </TextView>


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="text"
            android:padding="10dp"
            android:hint="@string/username"
            android:textColor="#4B83E5"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/registerSign">

        </com.google.android.material.textfield.TextInputEditText>


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/fullName"
            android:hint="@string/fullname"
            android:textColor="#4B83E5"
            app:layout_constraintTop_toBottomOf="@+id/usernameSignup"
            android:padding="10dp"
            android:layout_margin="10dp">

        </com.google.android.material.textfield.TextInputEditText>

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/email"
            android:hint="@string/email"
            android:textColor="#4B83E5"
            app:layout_constraintTop_toBottomOf="@+id/fullName"
            android:padding="10dp"
            android:layout_margin="10dp">

        </com.google.android.material.textfield.TextInputEditText>

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/passwordSignup"
            android:hint="@string/password"
            android:textColor="#4B83E5"
            app:layout_constraintTop_toBottomOf="@+id/email"
            android:padding="10dp"
            android:layout_margin="10dp">

        </com.google.android.material.textfield.TextInputEditText>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordSignup">

        </ProgressBar>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/passwordSignup"
            android:layout_margin="20dp"
            android:text="@string/register"
            android:id="@+id/btn_register">

        </Button>

        <TextView
            android:id="@+id/loginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/loginhere"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_register">

        </TextView>




</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>