<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".AddCommentActivity">



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:hint="@string/your_comment"
        android:id="@+id/newComment"
        android:text=""
        android:textSize="25sp"
        android:padding="10dp"
        android:layout_margin="10dp">

    </EditText>

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newComment"
        android:id="@+id/rating">

    </RatingBar>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/btnC"
        android:id="@+id/btnAdd"
        android:layout_margin="10dp"
        android:text="@string/add">

    </Button>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/btnC"
        android:layout_margin="10dp"
        android:text="@string/cancel">

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>