<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".HomeFragment">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/place_information"
                android:textSize="30sp"
                android:gravity="center_horizontal"
                android:id="@+id/placeInfo"
                android:textColor="#4B83E5"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="@string/place_name"
                android:textColor="#4B83E5">

            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="30sp"
                android:id="@+id/placeName"
                android:textSize="20sp"
                android:textColor="#4B83E5"
                android:text=""
                android:paddingStart="30sp">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="#4B83E5"
                android:text="@string/reviews"
                >

            </TextView>

            <RelativeLayout
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:padding="2dp"
                android:background="#4B83E5"
                >
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cardList"
                tools:listitem="@layout/review_item"
                >

            </androidx.recyclerview.widget.RecyclerView>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="25dp"
                android:id="@+id/addComment"
                android:text="@string/add_comment">

            </Button>

        </LinearLayout>

</ScrollView>