<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:background="#432CE7FF">

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/user"
        android:textColor="#4B83E5"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"
        >

    </TextView>

    <TextView
        android:id="@+id/userCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text=""
        android:textColor="#4B83E5"
        android:textSize="25sp"
        app:layout_constraintLeft_toRightOf="@id/text3"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <TextView
        android:id="@+id/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/comment"
        android:textColor="#4B83E5"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text3"
        android:textStyle="bold">

    </TextView>

    <TextView
        android:id="@+id/commentCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:padding="10dp"
        android:text=""
        android:textColor="#4B83E5"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text4"
        >

    </TextView>

    <TextView
        android:id="@+id/ratingTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/rating"
        android:textColor="#4B83E5"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/commentCard"
        android:textStyle="bold">

    </TextView>

    <TextView
        android:id="@+id/ratingAvg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textColor="#4B83E5"
        android:textSize="25sp"
        app:layout_constraintLeft_toRightOf="@id/ratingTxt"
        app:layout_constraintTop_toTopOf="@id/ratingTxt">

    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>