<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        tools:context=".MainActivity"
        android:id="@+id/home"
        android:backgroundTint="@color/black"
        android:foregroundTint="@color/black">

        <include
            layout="@layout/header_home"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

        </include>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:id="@+id/picture">



            <com.mikhaellopez.circularimageview.CircularImageView
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_launcher"
                >

            </com.mikhaellopez.circularimageview.CircularImageView>

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">


                <ImageView
                    android:id="@+id/person1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:src="@drawable/ic_baseline_person1_24">

                </ImageView>

                <ImageView
                    android:id="@+id/person2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/person1"
                    android:padding="3dp"
                    android:src="@drawable/ic_baseline_person1_24">

                </ImageView>

                <ImageView
                    android:id="@+id/emailIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/person2"
                    android:padding="3dp"
                    android:src="@drawable/ic_baseline_email_24">

                </ImageView>

                <TextView
                    android:id="@+id/text1"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/person1"
                    android:layout_toRightOf="@id/person1"
                    android:text="@string/username"
                    android:textColor="#4B83E5"
                    android:textSize="18sp">

                </TextView>

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/text1"
                    android:layout_toRightOf="@id/text1"
                    android:textColor="#4B83E5"
                    android:textSize="16sp">

                </TextView>


                <TextView
                    android:id="@id/text2"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/person1"
                    android:layout_toEndOf="@id/person2"
                    android:layout_toRightOf="@id/person2"
                    android:text="@string/full_name"
                    android:textColor="#4B83E5"
                    android:textSize="18sp">

                </TextView>

                <TextView
                    android:id="@+id/fullName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/person1"
                    android:layout_toEndOf="@id/text2"
                    android:layout_toRightOf="@id/text2"
                    android:textColor="#4B83E5"

                    android:textSize="18sp"></TextView>

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/person2"
                    android:layout_toEndOf="@id/person1"
                    android:layout_toRightOf="@id/person1"
                    android:text="@string/email"
                    android:textColor="#4B83E5"
                    android:textSize="18sp">

                </TextView>

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/person2"
                    android:layout_toEndOf="@id/text2"
                    android:layout_toRightOf="@id/text2"
                    android:textColor="#4B83E5"
                    android:textSize="18sp">

                </TextView>
            </RelativeLayout>

        </LinearLayout>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_edit"
            android:text="@string/edit_profile"
            app:backgroundTint="#4B83E5"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            >

        </Button>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_logout"
            android:text="@string/log_out"
            app:backgroundTint="#4B83E5"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            >

        </Button>
    </LinearLayout>

</ScrollView>



